--- a/Explorer/Explorer/Views/MainPage.xaml
+++ b/Explorer/Explorer/Views/MainPage.xaml
@@ -4,24 +4,20 @@
             xmlns:d="http://xamarin.com/schemas/2014/forms/design"
             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
             mc:Ignorable="d"
+            xmlns:controls="clr-namespace:Explorer.CustomControls"
             xmlns:views="clr-namespace:Explorer.Views"
             x:Class="Explorer.Views.MainPage">
 
     <MasterDetailPage.Master>
-        <views:MenuPage />
+        <views:MenuPage/>
     </MasterDetailPage.Master>
 
     <MasterDetailPage.Detail>
-        <NavigationPage>
-            <NavigationPage.Icon>
-                <OnPlatform x:TypeArguments="FileImageSource">
-                    <On Platform="iOS" Value="tab_feed.png"/>
-                </OnPlatform>
-            </NavigationPage.Icon>
+        <controls:CustomNavigationPage>
             <x:Arguments>
-                <views:ItemsPage />
+                <views:ExplorerDetailPage/>
             </x:Arguments>
-        </NavigationPage>
+        </controls:CustomNavigationPage>
     </MasterDetailPage.Detail>
-    
+
 </MasterDetailPage>
